<resources>
    <string name="app_name">Hello World</string>
    <string name="bmi">BMI atau body mass index merupakan .....</string>
    <string name="berat_badan" />
    <string name="beratBadan">Berat Badan (Kg)</string>
    <string name="tinggiBadan">Tinggi Badan</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="hitung">Hitung</string>
    <string name="bmi_label">BMI atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kurus">kurus</string>
    <string name="ideal">ideal</string>
    <string name="gemuk">gemuk</string>
    <string name="kategori_x">kategori: %1$s</string>
</resources>